# tinyrenderer

./: CMakeLists.txt  LICENSE  MANIFEST.in  Makefile  README.md  RenderBuffers.h  TinyRenderer.cpp  TinyRenderer.h  TinyShapeData.h  geometry.cpp  geometry.h  main.cpp  model.cpp  model.h  our_gl.cpp  our_gl.h  renderbuffers.h  setup.py  tgaimage.cpp  tgaimage.h  tinyrenderer.cpp  tinyrenderer.h  tinyshapedata.h
examples/cpp/: hello_tinyrenderer.cpp
examples/python/: example_mesh.py  hello_pytinyrenderer.py  hello_tinyrenderer.py
python/: CMakeLists.txt  pytinyrenderer.cc  pytinyrenderer.cpp
python/examples/: example_mesh.py  test.py
tests/: import_test.py
